--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1><strong>Tripelia</strong></h1>
-					<p>Answers. Anytime. AnyWhere<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<p>Answers. Anytime. AnyWhere</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
