--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Where you can find us</h2>
+								<h2>What we'll be doing?</h2>
 							</header>
 							<p>We will be available on a plethora of media, such as youtube, instagram, twitter, facebook, reddit, and of course, this webpage!</p>
 							<p>We will host Q&A's on this website while and post general information. This website is where you will also find scheduled events, not to mention the archives of videos and work will be left here so be sure to drop by!</p>
