--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
 		<!-- Header -->
 			<section id="header">
+				<div class="sidebar" id="side-bar">
+					<div class="sideIcons">
+						<li><img src="images/home.png"><h3 class="hidden"> Home</h3></li>
+						<li><img src="images/forumIcon.png"> <h3 class="hidden"> Ask </h3></li>	
+					</div>
+				</div>
+				<div class="menu" id="menuDiv">
+					<input type="image" src = "images/menu_icon.png" id="menuButton"/>
+				</div>
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1><strong>Tripelia</strong></h1>
@@ -458,6 +467,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/transitions.js"></script>
 	</body>
 </html>
