--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 
 		<!-- Header -->
 			<section id="header">
-				<div class="sidebar" id="side-bar">
-					<div class="sideIcons">
-						<li><img src="images/home.png"><h3 class="hidden"> Home</h3></li>
-						<li><img src="images/forumIcon.png"> <h3 class="hidden"> Ask </h3></li>	
-					</div>
-				</div>
-				<div class="menu" id="menuDiv">
-					<input type="image" src = "images/menu_icon.png" id="menuButton"/>
-				</div>
 				<div class="inner">
+					<div class="menu" id="btnNavDiv">
+						<input id="btnNav" type="image" src="images/menu_icon.png"></input>
+					</div>
+					<div id="sideBar">						
+						<ul class="hidden" id="sideBarList">
+							<div id="topSideBar"><h1>MENU</h1></div>
+							<li><h3>Home</h3></li>
+							<li><h3>Discuss</h3></li>
+							<li><h3>FAQ</h3></li>
+							<li><h3>Support Us</h3></li>
+							<li><h3>Archives</h3></li>
+							<li><h3>Help</h3></li>
+						</ul>
+					</div>
 					<span class="icon solid major fa-cloud"></span>
 					<h1><strong>Tripelia</strong></h1>
 					<p>Answers. Anytime. AnyWhere</p>
